// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(Chart)
      data={
        Array [
          Object {
            "hoverinfo": "none",
            "name": "Sales Target",
            "orientation": "h",
            "type": "bar",
            "x": Array [
              2300,
              1000,
              8500,
            ],
            "y": Array [
              "January",
              "February",
              "March",
            ],
          },
        ]
      }
      layout={Object {}}
    />
  </HvProvider>
</JssProvider>
`;

exports[`Tooltip withStyles should render correctly 1`] = `
<JssProvider
  generateClassName={[Function]}
>
  <HvProvider
    changeTheme={[Function]}
    router={null}
    theme={null}
    uiKitTheme="dawn"
  >
    <WithStyles(MainToolTip)
      coordinates={Object {}}
      data={Object {}}
    />
  </HvProvider>
</JssProvider>
`;
